2013-12-06  Araki Ken  <arakiken@users.sf.net>

	* ml_term.c: ml_pty_ssh_set_use_multi_thread() is called before and after
	  ml_pty_new().

	* libptyssh/ml_pty_ssh.c: ml_pty_ssh_set_use_multi_thread() which enables or
	  disables multi threading of openssl/libssh2 is added.

	* configure.in: -lcrypto is specified with -lssh2 on win32.

2013-12-03  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: GdkPixbufLoader is used instead of g_unix_input_stream_new().

	* main.c, libptyssh/ml_pty_ssh.c:
	  main_tid used in ml_pty_ssh.c is initialized not in ml_pty_ssh.c but in main.c.

2013-12-02  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c, x_event_source.c: Minor fixes.

2013-12-02  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: Typo which disabled to paste UTF8 string is fixed.

2013-12-01  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: The limitation of the column width and the line height (< 32)
	  is removed.

2013-11-30  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: U+200c-200f and U+202a-202e aren't converted
	  even if -n option is specified.

2013-11-28  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: The bug which ignored win->hmargin and win->vmargin
	  in calling win->window_exposed() in expose_window() is fixed.
	  (If large value was specified for --border option, hidden input method
	  window wasn't cleared.)

	* fb/x_display.c, fb/x_virtual_kbd.c, fb/x_window.c, x_window_cairo.c,
	  x_window_xft.c, win32/x_window.c, win32/x_xic.c,
	  x_im_candidate_screen.c, x_im_status_screen.c, x_main_config.c,
	  x_main_config.h, x_sb_screen.c, x_screen.[ch], x_screen_manager.c,
	  x_scrollbar.c, x_window.h, xlib/x_window.c, xlib/x_xic.c:
	  "inner_border" option accepts [horizontal border],[vertical border].

	* kik_sig_child.c: Wait multiple zombie processes for one SIGCHLD signal.

2013-11-24  Araki Ken  <arakiken@users.sf.net>

	* x_screen_manager.c: Memory leak when opening pty fails on win32gdi
	  is fixed.
